feat: pagina de contatos #3

--- a/contato.html
+++ b/contato.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contato</title>
 </head>
 <body>
-    <h1>Boas-Vindas, caro visitante</h1>
-    <a href="contato.html">Acesse a página de Contato</a>
+    <h1> Contato </h1>
+    <p>Email: yohanajahn2@gmail.com </p>
+    <p>Telefone: (47) 9 9223-6761</p>
 </body>
 </html>
