--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Boas-Vindas, caro visitante</h1>
+    <a href="contato.html">Acesse a página de Contato</a>
+    <a href="equipe.html">Conheça nossa Equipe</a>
 </body>
 </html>
